[package]
authors = [
    "Eric Trombly <etrombly@yahoo.com>",
]
categories = ["gui", "wasm", "gcode"]
description = "Minimal gcode parser example"
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web", "gcode"]
license = "MIT/Apache-2.0"
name = "yew-wasm-pack-minimal"
readme = "README.md"
repository = "https://github.com/etrombly/gcode-yew"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
yew = { version = "0.13", features = ["web_sys"] }
gcode = {git = "https://github.com/Michael-F-Bryan/gcode-rs", default_features = false}
web-sys = { version ="0.3.36", features = ['CanvasRenderingContext2d','HtmlCanvasElement','MouseEvent', "WheelEvent"]}
arrayvec = "0.5.1"
js-sys = "0.3.36"
